--- a/src/features/home/views/layouts/home.layout.templ
+++ b/src/features/home/views/layouts/home.layout.templ
@@ -11,7 +11,7 @@ templ Home(stores []entities.StoreWithCategories, size int, storesLength int, is
     <div class="flex flex-col overflow-y-auto no-scrollbar">
         <div class="sticky top-0 bg-white">
             <div class="px-2">
-                @components.Searchbar(2)
+                @components.Searchbar()
             </div>
             <sl-progress-bar style="--height: 4px;" class="htmx-indicator w-full" indeterminate></sl-progress-bar>
         </div>
