--- a/src/features/store/views/components/searchbar.component.templ
+++ b/src/features/store/views/components/searchbar.component.templ
@@ -2,12 +2,23 @@ package store
 
 import (
 	"fmt"
+
+    sharedComponents "github.com/IqbalLx/food-order/src/shared/views/components"
 )
 
 templ Searchbar(storeName string) {
-    <div class="w-full pt-4 pb-2 shadow-sm">
-        <sl-input placeholder={ fmt.Sprintf("Cari menu %s disini ...", storeName) } size="small" class="bg-white text-sm" pill clearable>
+    <div class="flex flex-row items-center w-full justify-start justify-items-center gap-2 py-4 shadow-sm">
+        <sl-input placeholder={ fmt.Sprintf("Cari menu %s ...", storeName) } size="small" class="bg-white text-sm w-5/6" pill clearable>
             <sl-icon name="search" slot="prefix"></sl-icon>
         </sl-input>
+
+        <div
+            hx-trigger="load"
+            hx-get="/carts/count"
+            hx-target="this"
+            hx-swap="outerHTML"
+        >
+            @sharedComponents.CartIcon(0)
+        </div>
     </div>
 }
