--- a/src/shared/views/components/storeCard.component.templ
+++ b/src/shared/views/components/storeCard.component.templ
@@ -11,7 +11,7 @@ templ StoreCard(store entities.StoreWithCategories, size int, lastInList bool, i
     <div hx-boost="true" hx-indicator=".htmx-indicator">
         <a href={ templ.URL(fmt.Sprintf("/stores/%s", store.Slug)) } class="w-full">
         <sl-card 
-            class="ltr card-image bg-base-100 shadow-sm w-full"
+            class="ltr list card-image bg-base-100 shadow-sm w-full"
             if (lastInList && isScrollable) {
                 hx-trigger="intersect once"
                 hx-get={ fmt.Sprintf("/stores?size=%d&last_store_secondary_id=%d", size, store.SecondaryID) }
@@ -27,7 +27,7 @@ templ StoreCard(store entities.StoreWithCategories, size int, lastInList bool, i
                 class="aspect-square object-cover w-32 flex-none"
             />
 
-            <div class="w-56 sm:w-60 h-32 md:w-64 flex-initial mx-2">
+            <div class="w-full h-32 flex-initial mx-2">
                 <div class="h-full flex flex-col justify-evenly">
                     <div class="mb-1">
                         <div class="flex flex-row justify-between items-center w-full">
