--- a/src/static/main.css
+++ b/src/static/main.css
@@ -1046,14 +1046,6 @@ video {
   margin-bottom: 0;
 }
 
-.fixed {
-  position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -1062,40 +1054,24 @@ video {
   position: sticky;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
 
-.top-\[100vh\] {
-  top: 100vh;
-}
-
-.top-\[100dvh\] {
-  top: 100dvh;
+.top-0 {
+  top: 0px;
 }
 
 .z-50 {
   z-index: 50;
 }
 
-.-z-50 {
-  z-index: -50;
+.m-0 {
+  margin: 0px;
 }
 
 .m-2 {
   margin: 0.5rem;
-}
-
-.m-0 {
-  margin: 0px;
 }
 
 .mx-2 {
@@ -1106,11 +1082,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .my-4 {
@@ -1130,20 +1101,16 @@ video {
   margin-top: 1rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
 }
 
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .h-32 {
@@ -1166,10 +1133,6 @@ video {
   height: 100vh;
 }
 
-.h-0 {
-  height: 0px;
-}
-
 .w-32 {
   width: 8rem;
 }
@@ -1188,10 +1151,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-0 {
-  width: 0px;
 }
 
 .max-w-\[425px\] {
@@ -1220,6 +1179,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1266,6 +1229,10 @@ video {
   overflow-y: auto;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .bg-slate-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
@@ -1293,14 +1260,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
 }
 
 .text-lg {
@@ -1338,12 +1297,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-none {
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 /* Chrome, Safari and Opera */
 
 .no-scrollbar::-webkit-scrollbar {
@@ -1359,6 +1312,7 @@ video {
 
 sl-card.ltr::part(base) {
   flex-direction: row;
+  width: 100%;
 }
 
 sl-tab::part(base) {
@@ -1369,6 +1323,19 @@ sl-tab::part(base) {
 sl-card::part(body) {
   padding: 0;
   margin: 0;
+}
+
+sl-card.list::part(body) {
+  width: 65%;
+  padding: 0;
+  margin: 0;
+}
+
+sl-button.plain::part(base) {
+  border-radius: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 sl-card.disabled::part(base) {
@@ -1387,10 +1354,44 @@ slot.card__body {
   width: 100%;
 }
 
+sl-icon-button::part(base) {
+  padding: 0;
+  margin: 0;
+}
+
 /*
     https://github.com/tailwindlabs/tailwindcss/discussions/2394
     https://github.com/tailwindlabs/tailwindcss/pull/5732
 */
+
+@media only screen and (max-width: 375px) {
+  sl-card.list::part(body) {
+    width: 60%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  sl-card.list::part(body) {
+    width: 53%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.pop-out {
+  opacity: 1;
+  transition: all 200ms ease-out;
+}
+
+.pop-out.htmx-added {
+  opacity: 0;
+}
+
+.pop-out.htmx-settling {
+  opacity: 0;
+}
 
 @media (min-width: 640px) {
   .sm\:w-60 {
