--- a/src/features/home/views/components/searchbar.component.templ
+++ b/src/features/home/views/components/searchbar.component.templ
@@ -4,9 +4,48 @@ import (
     sharedComponents "github.com/IqbalLx/food-order/src/shared/views/components"
 )
 
-templ Searchbar() {
+templ SearchbarButton() {
     <div class="flex flex-row items-center w-full justify-start justify-items-center gap-2 py-4 shadow-sm">
-        <sl-input placeholder="Mau makan apa hari ini?" size="small" class="bg-white text-sm w-5/6" pill clearable>
+        <a href="/search" hx-boost="true" hx-indicator=".htmx-indicator" class="m-0 p-0 w-5/6">
+            <sl-input 
+                placeholder="Mau makan apa hari ini?" 
+                size="small" 
+                class="bg-white text-sm w-full" 
+                pill readonly
+            >
+                <sl-icon name="search" slot="prefix"></sl-icon>
+            </sl-input>
+        </a>
+
+        <div
+            hx-trigger="load"
+            hx-get="/carts/count"
+            hx-target="this"
+            hx-swap="outerHTML"
+            hx-indicator=".htmx-indicator"
+        >
+            @sharedComponents.CartIcon(0)
+        </div>
+    </div>
+}
+
+templ Searchbar(initialValue string) {
+    <div class="flex flex-row items-center w-full justify-start justify-items-center gap-2 py-4 shadow-sm">
+        <sl-input
+            id="home-searchbar"
+            placeholder="Mau makan apa hari ini?" 
+            size="small" 
+            class="bg-white text-sm w-5/6 shadow-sm"
+            name="query"
+            value={ initialValue }
+            pill clearable autofocus
+
+            hx-post="/stores/search"
+            hx-trigger="sl-input from:body delay:200ms"
+            hx-indicator=".htmx-indicator"
+            hx-target="#store-search-container"
+            hx-swap="innerHTML"
+            >
             <sl-icon name="search" slot="prefix"></sl-icon>
         </sl-input>
 
@@ -15,6 +54,7 @@ templ Searchbar() {
             hx-get="/carts/count"
             hx-target="this"
             hx-swap="outerHTML"
+            hx-indicator=".htmx-indicator"
         >
             @sharedComponents.CartIcon(0)
         </div>
