--- a/src/features/store/views/components/searchbar.component.templ
+++ b/src/features/store/views/components/searchbar.component.templ
@@ -30,6 +30,7 @@ templ Searchbar(store entities.StoreWithCategories, isWithSearchQuery bool, sear
             hx-indicator=".htmx-indicator"
             hx-target="#menu-container"
             hx-swap="innerHTML"
+            hx-sync="this:replace"
         >
             <sl-icon name="search" slot="prefix"></sl-icon>
         </sl-input>
