--- a/src/features/store/views/layouts/store.layout.templ
+++ b/src/features/store/views/layouts/store.layout.templ
@@ -2,6 +2,7 @@ package store
 
 import (
     "strconv"
+    "fmt"
 
     "github.com/IqbalLx/food-order/src/shared/entities"
     components "github.com/IqbalLx/food-order/src/features/store/views/components"
@@ -47,7 +48,7 @@ templ StoreHeader(store entities.StoreWithCategories) {
 }
 
 templ StoreFooter(store entities.StoreWithCategories, menuCategories []entities.StoreMenuCategory) {
-    <sl-tab-group placement="bottom" dir="rtl" no-scroll-controls
+    <sl-tab-group id="category-tabs" placement="bottom" dir="rtl" no-scroll-controls
         hx-trigger="store-menu-category-update from:body"
         hx-post={ "/stores/" + store.ID + "/menus/categories" }
         hx-target="this"
@@ -84,6 +85,23 @@ templ StoreFooter(store entities.StoreWithCategories, menuCategories []entities.
             </sl-tab>
         }
     </sl-tab-group>
+
+    <input id="menu-category-input" style="display: none;" name="menu_category_id" value=""></input>
+
+    <script>
+        const categoryTabs = document.querySelector('#category-tabs');
+        const inputCategory = document.querySelector('#menu-category-input');
+        categoryTabs.addEventListener('sl-tab-show', event => {
+            const categoryId = event.detail.name
+            if (categoryId !== "all") {
+                inputCategory.value = categoryId
+                return
+            }
+
+            inputCategory.value = ""
+            return
+        });
+    </script>
 }
 
 templ Store(
@@ -94,7 +112,20 @@ templ Store(
         isMenuScrollable bool,
         isWithSearchQuery bool,
         searchQuery string,
+        isWithInitialMenu bool,
+        initialMenuID string,
     ) {
+   <div id="menu-drawer-container"
+        if isWithInitialMenu {
+            hx-trigger="load"
+            hx-get={ fmt.Sprintf("/stores/%s/menus/%s", store.ID, initialMenuID) }
+            hx-target="this"
+            hx-swap="innerHTML"
+            hx-indicator=".htmx-indicator"
+        }
+   >
+   </div>
+
     <div class="flex flex-col h-screen justify-between overflow-y-auto no-scrollbar">
         <div>
             <div class="sticky top-0 bg-white z-50">
@@ -106,7 +137,15 @@ templ Store(
 
             @StoreHeader(store)
 
-            <div id="menu-container" class="flex flex-col gap-y-1 px-2 mb-4"
+            <div 
+                id="menu-container" 
+                class="flex flex-col gap-y-1 px-2 mb-4"
+
+                hx-get={ fmt.Sprintf("/stores/%s/menus", store.ID) }
+                hx-include="#store-menu-searchbar,#menu-category-input"
+                hx-trigger="sl-hide from:body"
+                hx-target="this"
+                hx-swap="innerHTML"
             >
                 for i, menu := range menus {
                     @components.MenuCard(store, menu, menuSize, i == menuSize - 1, isMenuScrollable, false, "", isWithSearchQuery, searchQuery)
