--- a/src/shared/views/components/storeCardWithMenu.component.templ
+++ b/src/shared/views/components/storeCardWithMenu.component.templ
@@ -17,74 +17,82 @@ script updateQuantityWithNoDisplay(menuID string, step int, isIncreasing bool) {
     inputElem.value = newQuantity.toString();
 }
 
-templ SmallMenuCard(menu entities.StoreMenuWithQuantity) {
-    <sl-card class="flex-none list ltr card-image bg-base-100 shadow-sm w-60 h-20 overflow-hidden">
-            <img
-                slot="image"
-                src={ menu.Image }
-                alt={ menu.Name }
+templ SmallMenuCard(storeSlug string, menu entities.StoreMenuWithQuantity) {
+    <sl-card 
+        class="flex-none list ltr card-image bg-base-100 shadow-sm w-60 h-20 overflow-hidden"
 
-                class="aspect-square object-cover h-20 flex-none"
-            />
+        hx-get={ fmt.Sprintf("/stores/%s?menu_id=%s", storeSlug, menu.ID) }
+        hx-trigger="click"
+        hx-push-url="true"
+        hx-target="section"
+        hx-swap="outerHTML"
+    >
+        <img
+            slot="image"
+            src={ menu.Image }
+            alt={ menu.Name }
 
-            <div class="w-full h-full flex flex-col justify-evenly mx-2 py-1">
-                <div class="flex flex-row justify-between items-start">
-                        <strong 
-                            if (menu.PricePromo != 0) {
-                                class="text-xs text-wrap w-2/3"
-                            } else {
-                                class="text-xs text-wrap"
-                            }
-                        >{ menu.Name }</strong>
+            class="aspect-square object-cover h-20 flex-none"
+        />
 
+        <div class="w-full h-full flex flex-col justify-evenly mx-2 py-1">
+            <div class="flex flex-row justify-between items-start">
+                    <strong 
                         if (menu.PricePromo != 0) {
-                            <sl-badge variant="danger" class="w-1/3" pill>
-                                <small>
-                                    Promo
-                                </small>
-                            </sl-badge>
+                            class="text-xs text-wrap w-2/3"
+                        } else {
+                            class="text-xs text-wrap"
                         }
-                </div>
+                    >{ menu.Name }</strong>
 
-                <div class="flex flex-row justify-between items-end w-full">
                     if (menu.PricePromo != 0) {
-                        <div class="flex flex-row w-full gap-2">
-                            <p class="text-xs">{ utils.FormatPrice(menu.PricePromo) }</p>
-                            <s class="text-xs text-slate-300">{ utils.FormatPrice(menu.Price) }</s>
-                        </div>
-                    } else {
-                        <p class="text-xs">{ utils.FormatPrice(menu.Price) }</p>
+                        <sl-badge variant="danger" class="w-1/3" pill>
+                            <small>
+                                Promo
+                            </small>
+                        </sl-badge>
                     }
+            </div>
 
-                    <div>
-                        <form id={ "form-input-" + menu.ID } style="display: none;">
-                            <input 
-                                id={ "quantity-input-" + menu.ID }  
-                                name="quantity" value={ strconv.Itoa(menu.Quantity) }
-                            ></input>
-                            <input
-                            name="menu_id" value={ menu.ID } 
-                            ></input>
-                        </form>
-
-                        <sl-button 
-                                variant="default" 
-                                size="small" 
-                                circle
-
-                                onclick={ updateQuantityWithNoDisplay(menu.ID, 1, true) }
-                                hx-put="/carts"
-                                hx-trigger="click delay:300ms"
-                                hx-include={ "#form-input-" + menu.ID }
-                                hx-swap="none"
-                                hx-indicator=".htmx-indicator"
-                            > 
-                                <sl-icon name="plus-lg" label="Tambah ke Keranjang" class="text-sm"></sl-icon>
-                        </sl-button>
+            <div class="flex flex-row justify-between items-end w-full">
+                if (menu.PricePromo != 0) {
+                    <div class="flex flex-row w-full gap-2">
+                        <p class="text-xs">{ utils.FormatPrice(menu.PricePromo) }</p>
+                        <s class="text-xs text-slate-300">{ utils.FormatPrice(menu.Price) }</s>
                     </div>
+                } else {
+                    <p class="text-xs">{ utils.FormatPrice(menu.Price) }</p>
+                }
+
+                <div>
+                    <form id={ "form-input-" + menu.ID } style="display: none;">
+                        <input 
+                            id={ "quantity-input-" + menu.ID }  
+                            name="quantity" value={ strconv.Itoa(menu.Quantity) }
+                        ></input>
+                        <input
+                        name="menu_id" value={ menu.ID } 
+                        ></input>
+                    </form>
+
+                    <sl-button 
+                            variant="default" 
+                            size="small" 
+                            circle
+
+                            onclick={ updateQuantityWithNoDisplay(menu.ID, 1, true) }
+                            hx-put="/carts"
+                            hx-trigger="click consume delay:300ms"
+                            hx-include={ "#form-input-" + menu.ID }
+                            hx-swap="none"
+                            hx-indicator=".htmx-indicator"
+                        > 
+                            <sl-icon name="plus-lg" label="Tambah ke Keranjang" class="text-sm"></sl-icon>
+                    </sl-button>
                 </div>
             </div>
-        </sl-card>
+        </div>
+    </sl-card>
 }
 
 templ StoreCardWithMenu(store entities.StoreWithMatchingMenu, query string, size int, isNextPageAvailable bool, nextPage int, lastInList bool) {
@@ -151,7 +159,7 @@ templ StoreCardWithMenu(store entities.StoreWithMatchingMenu, query string, size
                         class="mr-2"
                     }
                 >
-                    @SmallMenuCard(menu)
+                    @SmallMenuCard(store.Slug, menu)
                 </div>
             }
 
