--- a/src/static/main.css
+++ b/src/static/main.css
@@ -1074,10 +1074,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-auto {
-  margin: auto;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -1091,11 +1087,6 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
 }
 
 .mb-1 {
@@ -1154,12 +1145,20 @@ video {
   height: 100vh;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.h-2\/3 {
+  height: 66.666667%;
 }
 
-.w-14 {
-  width: 3.5rem;
+.h-60 {
+  height: 15rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-2\/3 {
@@ -1192,10 +1191,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-11 {
-  width: 2.75rem;
 }
 
 .max-w-\[425px\] {
@@ -1250,10 +1245,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -1280,6 +1271,10 @@ video {
 
 .gap-y-2 {
   row-gap: 0.5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .overflow-hidden {
@@ -1410,6 +1405,11 @@ sl-card::part(body) {
 
 sl-card.list::part(body) {
   width: 65%;
+  padding: 0;
+  margin: 0;
+}
+
+sl-drawer.menu::part(body) {
   padding: 0;
   margin: 0;
 }
