--- a/src/static/main.css
+++ b/src/static/main.css
@@ -1079,6 +1079,11 @@ video {
   margin-right: 0.5rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1133,6 +1138,10 @@ video {
   height: 10rem;
 }
 
+.h-52 {
+  height: 13rem;
+}
+
 .h-\[100dvh\] {
   height: 100dvh;
 }
@@ -1143,18 +1152,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-2\/3 {
-  height: 66.666667%;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-52 {
-  height: 13rem;
 }
 
 .w-1\/3 {
@@ -1265,6 +1262,11 @@ video {
   gap: 1rem;
 }
 
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-y-1 {
   row-gap: 0.25rem;
 }
@@ -1291,6 +1293,12 @@ video {
 
 .overflow-x-scroll {
   overflow-x: scroll;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .text-wrap {
@@ -1328,6 +1336,11 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -1375,6 +1388,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline {
+  outline-style: solid;
+}
+
 /* Chrome, Safari and Opera */
 
 .no-scrollbar::-webkit-scrollbar {
@@ -1405,6 +1422,12 @@ sl-card::part(body) {
 
 sl-card.list::part(body) {
   width: 65%;
+  padding: 0;
+  margin: 0;
+}
+
+sl-card.small-list::part(body) {
+  width: 75%;
   padding: 0;
   margin: 0;
 }
@@ -1453,11 +1476,23 @@ sl-icon-button::part(base) {
     padding: 0;
     margin: 0;
   }
+
+  sl-card.small-list::part(body) {
+    width: 70%;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 @media only screen and (max-width: 320px) {
   sl-card.list::part(body) {
     width: 53%;
+    padding: 0;
+    margin: 0;
+  }
+
+  sl-card.small-list::part(body) {
+    width: 63%;
     padding: 0;
     margin: 0;
   }
