--- a/src/shared/views/layouts/root.templ
+++ b/src/shared/views/layouts/root.templ
@@ -15,7 +15,7 @@ templ Root(component templ.Component) {
             @component
         </section>
     </body>
-    <script src="/static/htmx.min.js"></script>
+    <script src="/htmx/htmx.min.js"></script>
     <script type="module" src="/shoelace/cdn/shoelace.js"></script>
     </html>
 }
@@ -35,7 +35,7 @@ templ RootWithTitle(component templ.Component, title string) {
             @component
         </section>
     </body>
-    <script src="/static/htmx.min.js"></script>
+    <script src="/htmx/htmx.min.js"></script>
     <script type="module" src="/shoelace/cdn/shoelace.js"></script>
     </html>
 }
